--- a/Layout/index.html
+++ b/Layout/index.html
@@ -2,61 +2,191 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
         <title>Formulário com Bootstrap e Javascript</title>
+
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+
+        <link rel="stylesheet" href="estilo.css">
+
     </head>
+
 <body>
+
     <body class="container-fluid" style="background-color: #d2d2d2;">
+
         <h1 class="text-center">Formulário com Bootstrap e Javascript</h1>
+
         <form action="" method="post">
 
             <!-- CAMPO DE TEXTO: NOME -->
             
             <section class="row">
+               
                 <div class="col-md-12">
+
                     <label for="nome" class="mb-2">Digite seu nome</label>
+
                     <input type="text" class="form-control" id="nome">
+
                 </div>
+
             </section>
 
             <!-- CAMPO DE TEXTO E EMAIL: ENDERÇO E EMAIL-->
 
             <section class="row mt-3">
+               
                 <div class="col-md-6">
+
                     <label for="endereco" class="mb-2">Qual o seu endereço?</label>
+
                     <input type="text" id="enderco" class="form-control">
+
                 </div>
 
                 <div class="col-md-6">
+
                     <label for="email" class="mb-2">Qual o seu email?</label>
+
                     <input type="email" class="form-control" id="email">
+
                 </div>
+
             </section>
 
                <!-- CAMPO DE TEXTO SOMENTE LEITURA, NÃO PODE DIGITAR-->
 
             <section class="row mt-3">
+               
                 <div class="col-md-12">
+
                     <label for="" class="mb-2">Apenas leitura</label>
+
                     <input type="text"  class="form-control" placeholder="Apenas leitura" readonly> 
+
                 </div>
+
             </section>
 
               <!-- CAMPO DE SENHA -->
 
             <section class="row mt-3">
+                
                 <div class="input-group col-md-12">
+
                     <label for="senha" class="input-group-text col-form-label">Informe sua senha</label>
+
                     <input type="password" id="senha" class="form-control">
+
                     <span class="material-symbols-outlined btn btn-primary">
+
                         visibility
+
                     </span>
+
                 </div>
+
             </section>
+
+            <!-- CAMPO DE RADIO -->
+
+            <section class="row mt-3">
+
+                <label class="col-form-label-lg">Qual o seu nível de escolaridade?</label>
+
+                <div>
+
+                    <input type="radio" id="fundamental" class="form-check-input" value="fundamental" name="escolaridade">
+
+                    <label for="fundamental" class="form-check-label ps-1">Fundamental</label>
+
+                </div>
+
+                <div>
+
+                    <input type="radio" id="medio" class="form-check-input" value="fundamental" name="escolaridade">
+
+                    <label for="medio" class="form-check-label ps-1">Médio</label>
+
+                </div>
+               
+                <div>
+
+                    <input type="radio" id="superior" class="form-check-input" value="fundamental" name="escolaridade">
+
+                    <label for="superior" class="form-check-label ps-1">Superior</label>
+
+                </div>
+
+            </section>
+           
+            <div class=" row col-4 mx-auto mt-3">
+
+                <button class="btn btn-primary">Verificar escolaridade</button> 
+
+            </div>
             
+            <!-- CAMPO CHECKBOX: SWITCH -->
+
+            <section class="alert alert-warning mt-3">
+
+                <p class="text-center">VOCÊ ACEITA OS TERMOS DO CONTRATO?</p>
+
+            </section>
+
+            <section class="form-check form-switch col-2 mx-auto">
+
+                <input type="checkbox" name="escolha" id="escolha" value="escolha" class="form-check-input">
+
+                <label for="escolha" class="form-check-label">Exibir termos do contrato</label>
+
+            </section>
+
+            <!-- INFO DO CONTRATO  -->
+
+            <section class="bg-light p-5 mt-3" id="contrato">
+               
+                <div class="container-fluid">
+
+                    <h1 class="fw-bold mb-2">Termos do contrato</h1>
+
+                    <p class="fs-5 lead altura">
+
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi cum veritatis aperiam aliquam doloremque, ipsa expedita laborum aspernatur sapiente accusamus ad modi blanditiis, porro delectus nisi fuga, nulla recusandae? Inventore?
+                        Voluptatum quam debitis quia nobis maxime obcaecati quis adipisci atque exercitationem incidunt, a dicta tempora illo minus enim eaque velit vitae cum sed, repellendus eius delectus voluptate totam facere. Reiciendis?
+                        Magni ad beatae libero quam eaque nesciunt id harum, ex, non odio ab ratione laborum fugit porro a quisquam, debitis omnis numquam perspiciatis dolorum! Assumenda dolorem quibusdam doloribus! Accusamus, necessitatibus.
+                        Perferendis exercitationem accusantium, iusto dolorem laudantium ipsum. Inventore, magni aperiam repellat dolore, impedit porro eligendi mollitia officiis eaque nobis officia odio cupiditate harum saepe ducimus maxime, tempore obcaecati quisquam. Velit?
+                        Animi ipsum saepe placeat error facilis est aperiam repellendus, similique suscipit cupiditate? Praesentium, numquam possimus. Aut, pariatur! Minima sunt, placeat et, facere dolorum molestiae nisi maxime quo rem enim est!
+                        Minus ipsam sit dolores enim fugiat? Molestiae unde, neque dolorum suscipit iste perspiciatis voluptatem eligendi impedit commodi ut minima itaque fuga officiis quaerat dolores, temporibus corrupti? Dolorum suscipit in voluptatum.
+                        Amet expedita possimus soluta consectetur saepe animi porro, culpa officia cum pariatur exercitationem nisi. Voluptatibus animi numquam ullam repudiandae nemo cum illo, iusto adipisci porro sit. Aspernatur itaque qui quas!
+                        Eveniet, explicabo fugit? Perspiciatis earum autem tenetur placeat suscipit odit, praesentium sint voluptate magni ipsam? Eum sint eveniet vero temporibus voluptate iste cupiditate praesentium eaque! Aperiam, minima ex! Optio, non.
+                        Animi ipsa aliquid nihil inventore, quo ea mollitia quis voluptas. Eligendi nesciunt numquam placeat explicabo earum neque dolore cum quod sed unde in magnam molestias cupiditate ad, sapiente similique! Cupiditate.
+                        Totam odit nisi quis doloribus ullam ut reprehenderit, sint ipsa soluta. Totam quam eius modi temporibus, nihil repellendus, magni eveniet deleniti in dicta quibusdam. Laudantium earum quos tempore non veritatis?
+
+                    </p>
+
+                    <hr>
+
+                    <section class="form-check col-2 mx-auto">
+
+                        <input type="checkbox" name="concordo" id="concord" value="concordo" class="form-check-input">
+        
+                        <label for="concordo" class="form-check-label">CONCORDO</label>
+        
+                    </section>
+
+                </div>
+
+            </section>
+
         </form>
     </body>
 </body>
