--- a/Layout/index.html
+++ b/Layout/index.html
@@ -48,7 +48,7 @@
 
                     <label for="endereco" class="mb-2">Qual o seu endereço?</label>
 
-                    <input type="text" id="enderco" class="form-control">
+                    <input type="text" id="endereco" class="form-control">
 
                 </div>
 
@@ -57,6 +57,8 @@
                     <label for="email" class="mb-2">Qual o seu email?</label>
 
                     <input type="email" class="form-control" id="email">
+
+                    <small id="validaEmail"></small>
 
                 </div>
 
@@ -188,6 +190,7 @@
             </section>
 
         </form>
+        <script src="javascript/script.js"></script>
     </body>
 </body>
 </html>
