Finalizado validação de senha

--- a/Layout/index.html
+++ b/Layout/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
     <head>
+
         <meta charset="UTF-8">
 
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -90,7 +93,7 @@
 
                     <span class="material-symbols-outlined btn btn-primary">
 
-                        visibility
+                        visibility_off
 
                     </span>
 
@@ -132,7 +135,7 @@
            
             <div class=" row col-4 mx-auto mt-3">
 
-                <button class="btn btn-primary">Verificar escolaridade</button> 
+                <button class="btn btn-primary" id="btnEscolaridade">Verificar escolaridade</button> 
 
             </div>
             
@@ -190,7 +193,10 @@
             </section>
 
         </form>
+
         <script src="javascript/script.js"></script>
+
     </body>
+
 </body>
 </html>
