Finalizado o formulario javascript

--- a/Layout/index.html
+++ b/Layout/index.html
@@ -117,7 +117,7 @@
 
                 <div>
 
-                    <input type="radio" id="medio" class="form-check-input" value="fundamental" name="escolaridade">
+                    <input type="radio" id="medio" class="form-check-input" value="medio" name="escolaridade">
 
                     <label for="medio" class="form-check-label ps-1">Médio</label>
 
@@ -125,7 +125,7 @@
                
                 <div>
 
-                    <input type="radio" id="superior" class="form-check-input" value="fundamental" name="escolaridade">
+                    <input type="radio" id="superior" class="form-check-input" value="superior" name="escolaridade">
 
                     <label for="superior" class="form-check-label ps-1">Superior</label>
 
@@ -182,7 +182,7 @@
 
                     <section class="form-check col-2 mx-auto">
 
-                        <input type="checkbox" name="concordo" id="concord" value="concordo" class="form-check-input">
+                        <input type="checkbox" name="concordo" id="concordo" value="concordo" class="form-check-input">
         
                         <label for="concordo" class="form-check-label">CONCORDO</label>
         
@@ -199,4 +199,5 @@
     </body>
 
 </body>
+
 </html>
